Add internal case notes
Refs #43
